package symbols;

public enum IDType {
    /** 变量名ID */
    VAR_ID,
    /** 常量名ID */
    CONST_ID,
    /** 过程ID */
    PROC_ID 
}
